feat: diretivas estruturais

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
  
-  <app-header></app-header>
- 
-  <app-home></app-home>
+  <app-header [title] = "title" [palavra] = "palavra"></app-header>
+  
 
-  <app-footer></app-footer>
+  <app-exercicio-diretivas></app-exercicio-diretivas>
+  
+  
