--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -10,8 +10,10 @@
     text-align: center;
     padding: 1rem;
 
- &__text{
-     margin: 0;
+ &__text {
+    
+     text-align: center;
+     margin:0;
      font-family: 'Courier New', Courier, monospace;
  } 
    
