feat: exercicio ngclass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
  
-  <app-header [title] = "title" [palavra] = "palavra"></app-header>
+  <app-header [title] = "title"></app-header>
   
-
-  <app-exercicio-diretivas></app-exercicio-diretivas>
+  <app-exercicio-ngclass> </app-exercicio-ngclass>
   
   
