feat: roteamento do app

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,17 @@
 <header class="header">
     <h1 class="header__title"> {{ title }} </h1>
+
+    <ul class="nav-bar-list" >
+        <li>
+            <a routerLink ="home">Home</a>
+        </li>
+        <li>
+            <a routerLink ="login"routerLinkActive="ative" >Login</a>
+        </li>
+        <li>
+            <a routerLink ="extrato"routerLinkActive="ative" >Extrato</a>
+        </li>
+    </ul>
 </header>
+
 
