--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
  
   <app-header [title] = "title"></app-header>
   
-  <app-exercicio-pipes> </app-exercicio-pipes>
+  
+
+  <router-outlet></router-outlet>
+  
   
   
